2004-10-20  David Hyatt  <hyatt@apple.com>

	Add better dumping of overflow information for scrolling regions.

	Fix for 3726524, crash in updateLayerPosition.  Make sure anonymous elements properly remove themselves
	from the render tree so that layers and so forth are cleaned up.
	
        Reviewed by darin

        * khtml/rendering/render_container.cpp:
        (RenderContainer::detach):
        * khtml/rendering/render_layer.h:
        (khtml::RenderLayer::scrollXOffset):
        (khtml::RenderLayer::scrollYOffset):
        * kwq/KWQRenderTreeDebug.cpp:
        (write):

2004-10-20  David Hyatt  <hyatt@apple.com>

	Fix for 3791146, make sure all lines are checked when computing overflow.
	
        Reviewed by kocienda

        * khtml/rendering/bidi.cpp:
        (khtml::RenderBlock::computeHorizontalPositionsForLine):
        (khtml::RenderBlock::layoutInlineChildren):
        (khtml::RenderBlock::findNextLineBreak):
        (khtml::RenderBlock::checkLinesForOverflow):
        * khtml/rendering/render_block.h:

2004-10-20  David Hyatt  <hyatt@apple.com>

	Fix for 3790936, make the unicode-breaking on the layout tests match Panther.
	
        Reviewed by kocienda

        * khtml/rendering/break_lines.cpp:
        (khtml::isBreakable):

2004-10-20  Darin Adler  <darin@apple.com>

        Reviewed by John.

        - fixed <rdar://problem/3317107> text input fields and text areas don't respect background color and text color CSS properties

        * khtml/rendering/render_form.cpp: (RenderFormElement::updateFromElement):
        Create a palette with the background and foreground colors in it and set it on the widget.

        * khtml/rendering/render_style.h: (khtml::StyleVisualData::operator==): No palette to compare
        with APPLE_CHANGES. Removed palette and palette-related function members.
        * khtml/rendering/render_style.cpp:
        (StyleVisualData::StyleVisualData): No palette to initialize with APPLE_CHANGES.